--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blackjack Game</title>
+    <title>Jeremys Blackjack</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <h1>Blackjack</h1>
+    <h1>Jeremy's Blackjack!</h1>
     <div id="game-area">
         <div id="dealer-area">
             <h2>Dealer's Hand</h2>
@@ -53,8 +53,8 @@
         </div>
     </div>
     <div id="controls">
-        <button id="hit-button">Hit</button>
-        <button id="stand-button">Stand</button>
+        <button id="hit-button">Hit Me!</button>
+        <button id="stand-button">Stay!</button>
         <button id="new-game-button">New Game</button>
     </div>
     <p id="message"></p>
